# vdso_crate_template

./: Makefile  README.md  loader.rs  rust-toolchain.toml
build_vdso/: Cargo.toml
build_vdso/src/: build_config.rs  gen_api.rs  gen_wrapper.rs  lib.rs  link.ld  link_no_segment.ld
doc/: 依赖接口支持.md
doc/assets/: vdso库、api和so的关系.drawio  vdso模板项目结构3.0.drawio
example/user_test/: Cargo.toml  build.rs
example/user_test/src/: main.rs
example/vdso_example/: Cargo.toml
example/vdso_example/src/: api.rs  interface.rs  lib.rs
vdso_helper/: Cargo.toml
vdso_helper/src/: lib.rs  mut_cfg.rs  trait_interface.rs  vvar_data.rs
