[package]
name = "build_vdso"
license = "Apache-2.0"
description = "用于构建vDSO的工具库，与vdso_helper配合使用"
homepage = "https://github.com/rosy233333/vdso_crate_template/blob/main/README.md"
documentation = "https://github.com/rosy233333/vdso_crate_template/blob/main/README.md"
repository = "https://github.com/rosy233333/vdso_crate_template"
readme = "../README.md"
version.workspace = true
edition.workspace = true

[dependencies]
regex = "1.8.5"
xmas-elf = "0.9.0"
