[package]
name = "vdso_helper"
license = "Apache-2.0"
description = "帮助开发vDSO的工具库"
homepage = "https://github.com/rosy233333/vdso_crate_template/blob/main/README.md"
documentation = "https://github.com/rosy233333/vdso_crate_template/blob/main/README.md"
repository = "https://github.com/rosy233333/vdso_crate_template"
readme = "../README.md"
version.workspace = true
edition.workspace = true

[dependencies]
hal = { version = "0.1.0", package = "vsched_hal" }
lazyinit = "0.2"
paste = "1.0"
